oop_mro/tests/trybuild/fail_static_field_generic_param.rs
use oop_mro::prelude::*;

oop_class! {
    class Cache<T> {
        static EMPTY: Option<T> = None;
    }
}

fn main() {}
